--- a/index.html
+++ b/index.html
@@ -196,6 +196,107 @@
             </div>
             <!---------------------------FIM TABLE --------------------------------------->
         </main>
+        <div class="right">
+            <div class="top">
+                <button id="menu-btn">
+                    <span class="material-icons-sharp">menu</span>
+                </button>
+                <div class="theme-toggler">
+                    <span class="material-icons-sharp active">light_mode</span>
+                    <span class="material-icons-sharp">dark_mode</span>
+                </div>
+                <div class="profile info">
+                    <p>Olá, <b>Renan</b></p>
+                    <small class="text-muted">Admin</small>
+                </div>
+                <div class="profile-photo">
+                    <img src="/images/profile-1.jpg" alt="Foto do Perfil do usuário" >
+                </div>
+            </div>
+            <!-- END TOP -->
+            <div class="recent-updates">
+                <h2>Recent Updates</h2>
+                <div class="updates">
+
+                    <div class="profile-photo">
+                        <img src="/images/profile-2.jpg" alt="Foto do Perfil do usuário">
+                    </div>
+                    <div class="message">
+                        <p><b>Mike Tyson</b> received his order of Nigth lion tech GPS drone.</p>
+                        <small class="text-muted">2 Minutes Ago</small>
+                    </div>
+
+                    <div class="profile-photo">
+                        <img src="/images/profile-3.jpg" alt="Foto do Perfil do usuário">
+                    </div>
+                    <div class="message">
+                        <p><b>Mike Tyson</b> received his order of Nigth lion tech GPS drone.</p>
+                        <small class="text-muted">2 Minutes Ago</small>
+                    </div>
+
+                    <div class="profile-photo">
+                        <img src="/images/profile-4.jpg" alt="Foto do Perfil do usuário">
+                    </div>
+                    <div class="message">
+                        <p><b>Mike Tyson</b> received his order of Nigth lion tech GPS drone.</p>
+                        <small class="text-muted">2 Minutes Ago</small>
+                    </div>
+                </div>
+            </div>
+            <!------------ END RECENT UPDATES ------------------->
+            <div class="sales-analytics">
+                <h2>Sales Analytics</h2>
+
+                <div class="item online">
+                    <div class="icon">
+                        <span class="material-icons-sharp">shopping_cart</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>ONLINE ORDERS</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                        <h5 class="success">+39%</h5>
+                        <h3>3849</h3>
+                    </div>
+                </div>
+
+                <div class="item offline">
+                    <div class="icon">
+                        <span class="material-icons-sharp">local_mall</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>OFFLINE ORDERS</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                        <h5 class="danger">-17%</h5>
+                        <h3>1100</h3>
+                    </div>
+                </div>
+                    
+                <div class="item customers">
+                    <div class="icon">
+                        <span class="material-icons-sharp">person</span>
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>NEW CUSTOMERS</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                        <h5 class="success">+25%</h5>
+                        <h3>849</h3>
+                    </div>
+                </div>
+                <div class="item add-product">
+                    <div>
+                        <span class="material-icons-sharp">add</span>
+                        <h3>Add Product</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
