--- a/index.html
+++ b/index.html
@@ -205,9 +205,11 @@
                     <span class="material-icons-sharp active">light_mode</span>
                     <span class="material-icons-sharp">dark_mode</span>
                 </div>
-                <div class="profile info">
-                    <p>Olá, <b>Renan</b></p>
-                    <small class="text-muted">Admin</small>
+                <div class="profile">
+                    <div class="info">
+                        <p>Olá, <b>Renan</b></p>
+                        <small class="text-muted">Admin</small>
+                    </div>
                 </div>
                 <div class="profile-photo">
                     <img src="/images/profile-1.jpg" alt="Foto do Perfil do usuário" >
